--- a/index.html
+++ b/index.html
@@ -1,198 +1,44 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" type="image/x-icon" href="../Favicon/favi.ico" />
-        <meta name="viewport" content="initial-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <title>mastermind</title>
-        <script src="script.js"></script>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>mastermind</title>
+    <link rel="icon" type="image/x-icon" href="../Favicon/favi.ico">
+    <meta name="viewport" content="initial-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi">
+    
+    <!-- External Stylesheets -->
+    <link rel="stylesheet" href="home-page-style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
 
-        <!-- Font stuff -->
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet" />
+    <script src="home-page-script.js" defer></script>
+</head>
 
-        <style>
-            * {
-                transition-duration: 0.3s;
-                user-select: none;
-            }
+<body onresize="fixDuck()">
+    <nav id="nav-bar-opacitic"></nav>
 
-            a {
-                text-decoration: none;
-            }
-
-            body {
-                color: #000000;
-                background: rgb(92, 163, 92);
-                -webkit-font-smoothing: none;
-                font-family: "Silkscreen", sans-serif;
-                image-rendering: pixelated;
-                background-size: 150%;
-                background-image: url(Images/bkg/grass.png);
-                margin: 0px;
-            }
-
-            footer {
-                padding: 20px 0;
-                background-color: #333;
-                color: white;
-            }
-
-            #Duck:hover {
-                cursor: pointer;
-            }
-
-            a {
-                text-decoration: none;
-            }
-
-            .frosted-glass:hover {
-                opacity: 1;
-                backdrop-filter: blur(10px);
-            }
-
-            .silkscreen-regular,
-            h1 {
-                font-family: "Silkscreen", serif;
-                font-weight: 400;
-                font-style: normal;
-            }
-
-            .silkscreen-bold {
-                font-family: "Silkscreen", serif;
-                font-weight: 700;
-                font-style: normal;
-            }
-
-            h1 {
-                text-align: center;
-                line-height: 10vh;
-                font-size: 6vw; /* Default to a responsive width-based font size */
-                transition-duration: 0s;
-            }
-
-            /* Media Query for mobile screens */
-            @media (max-width: 600px) {
-                h1 {
-                    font-size: 5vh; /* Adjust the font size for smaller screens */
-                }
-            }
-
-            .nav-item{
-                opacity: 100%;
-                z-index: 10;
-                font-size: 1.5vw;
-                margin: 1%;
-                position: fixed;
-                color: black;
-            }
-
-            .nav-item:hover{
-                color: rgb(0, 99, 8);
-                transform: translate(0, -5%);
-            }
-
-            footer {
-                bottom: 0px;
-                width: 100%;
-                z-index: 1;
-                background-image: url(Images/bkg/FooterMerge.png); 
-                height: 5%; 
-                position: fixed; 
-                background-size: 130%; 
-                background-color: rgba(255, 255, 255, 0);
-                background-repeat: no-repeat;
-                opacity: 0%;
-            }
-        </style>
-    </head>
-
-    <body onresize="fixDuck()">
-        <nav id="nav-bar-opacitic" style="opacity: 0%; z-index: 1;background-image: url(Images/bkg/RockMerge.png); height: 15%; width: 100%; position: fixed; background-size: 130%; background-repeat: no-repeat;">
-        </nav>
+    <div class="nav-container">
         <a href="subPages/About.html" class="nav-item">About</a>
-        <a style="left: 7%;" href="subPages/Contact.html" class="nav-item">Contacts</a>
-        <a style="left: 17%;" href="subPages/Projects.html" class="nav-item">Projects</a>
-        <a style="left: 27%;" href="indexOld.html" class="nav-item">Old</a>
+        <a href="subPages/Contact.html" class="nav-item">Contacts</a>
+        <a href="subPages/Projects.html" class="nav-item">Projects</a>
+        <a href="subPages/Projects.html" class="nav-item">Art</a>
+        <a href="indexOld.html" class="nav-item">Old</a>
+    </div>
 
+    <div class="title-container">
+        <h1>The Mastermind</h1>
+    </div>
 
-        <div style="width: 100%; height: 35%; top: 15%; position: absolute;">
-            <h1>The Mastermind</h1>
-        </div>
-        <div style="height: 80%; background-color: aqua; width: 100%; position: absolute; top: 50%; background-image: url(Images/bkg/plainwater.png);background-size: 8%;">
-            <div style="width: 100%; height: 20%;background-image: url(Images/bkg/merge.png);background-size: 150%;background-repeat: no-repeat;"></div>
-            <div id="Duck" onclick="reverseDuck()" style="margin-top: -8%; transition-duration: 0s; position: absolute; background-image: url(Images/duck.png); width: 16vw; height: 32vh; background-size: 100%; z-index: 3; background-repeat: no-repeat;"></div>
-        </div>
-        <footer id="footer">
-            <br>
-            &copy; 2025 The Mastrmind. All rights reserved.
-        </footer>
-    </body>
+    <div class="main-content">
+        <div class="merge-banner"></div>
+        <div id="Duck" onclick="reverseDuck()"></div>
 
-    <script>
-        const duck = document.getElementById("Duck");
-        duck.style.transform = "scaleX(-1)";
-        let position = 0;
-        let direction = 1;
-        const speed = 2;
-        var maxWidth = window.innerWidth - duck.offsetWidth;
-        var limit = Math.max( document.body.scrollHeight, document.body.offsetHeight, document.documentElement.clientHeight, document.documentElement.scrollHeight, document.documentElement.offsetHeight );
+        <h1>My name is [REDACTED] </h1>
+    </div>
 
-        function fixDuck() {
-            maxWidth = window.innerWidth - duck.offsetWidth;
-        }
-
-        function reverseDuck() {
-            if (direction == -1) {
-                direction = 1;
-                duck.style.transform = "scaleX(-1)";
-            } else {
-                direction = -1;
-                duck.style.transform = "scaleX(1)";
-            }
-        }
-
-        function moveDuck() {
-            position += speed * direction;
-
-            if (position >= maxWidth) {
-                direction = -1;
-                duck.style.transform = "scaleX(1)";
-            } else if (position <= 0) {
-                direction = 1;
-                duck.style.transform = "scaleX(-1)";
-            }
-
-            duck.style.left = position + "px";
-        }
-
-        const originalTitle = "The Mastermind - Home | ";
-        let positionTitle = 0;
-        function animateTitle() {
-            document.title = originalTitle.slice(positionTitle) + originalTitle.slice(0, positionTitle);
-            positionTitle = (positionTitle + 1) % originalTitle.length;
-        }
-
-        setInterval(animateTitle, 200);
-        setInterval(moveDuck, 10);
-
-        window.onscroll = function (e) {
-            var nav = document.getElementById("nav-bar-opacitic");
-            if (window.scrollY > 100) {
-                nav.style.opacity = "100%";
-            } else {
-                nav.style.opacity = "0%";
-            }
-
-            // Check if the user has scrolled to the bottom of the page
-            if (window.scrollY + window.innerHeight >= document.documentElement.scrollHeight) {
-                document.getElementById("footer").style.opacity = "100%";
-                console.log("max");
-            } else {
-                document.getElementById("footer").style.opacity = "0%";
-                console.log("no max");
-            }
-        }
-    </script>
+    <footer id="footer">
+        <br>&copy; 2025 The Mastrmind. All rights reserved.
+    </footer>
+</body>
 </html>
