--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="icon" type="image/x-icon" href="../Favicon/favi.ico">
     <meta name="viewport" content="initial-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi">
     
-    <!-- External Stylesheets -->
     <link rel="stylesheet" href="home-page-style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +14,7 @@
     <script src="home-page-script.js" defer></script>
 </head>
 
-<body onresize="fixDuck()">
+<body>
     <nav id="nav-bar-opacitic"></nav>
 
     <div class="nav-container">
@@ -29,16 +28,17 @@
     <div class="title-container">
         <h1>The Mastermind</h1>
     </div>
+    <div id="Duck" onclick="reverseDuck()"></div>
+
 
     <div class="main-content">
         <div class="merge-banner"></div>
-        <div id="Duck" onclick="reverseDuck()"></div>
-
-        <h1>My name is [REDACTED] </h1>
+        
+        <h1 class="article-text-black">My name is [REDACTED] I'm a nerdy CS major, this website exists because I was bored one day, you can find my githhub listed under the "About" and "Projects" sections.  This site contains several projects I have made, art that I have done, ways to contact me, and general information about me</h1>
     </div>
 
     <footer id="footer">
-        <br>&copy; 2025 The Mastrmind. All rights reserved.
+        <h2>&copy; 2025 The Mastrmind. All rights reserved.</h2>
     </footer>
 </body>
 </html>
