--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="subPages/About.html" class="nav-item">About</a>
         <a href="subPages/Contact.html" class="nav-item">Contacts</a>
         <a href="subPages/Projects.html" class="nav-item">Projects</a>
-        <a href="subPages/Projects.html" class="nav-item">Art</a>
+        <a href="subPages/Art.html" class="nav-item">Art</a>
         <a href="indexOld.html" class="nav-item">Old</a>
     </div>
 
@@ -33,7 +33,6 @@
 
     <div class="main-content">
         <div class="merge-banner"></div>
-        
         <h1 class="article-text-black">My name is [REDACTED] I'm a nerdy CS major, this website exists because I was bored one day, you can find my githhub listed under the "About" and "Projects" sections.  This site contains several projects I have made, art that I have done, ways to contact me, and general information about me</h1>
     </div>
 
