--- a/subPages/Contact.html
+++ b/subPages/Contact.html
@@ -18,11 +18,11 @@
     <nav id="nav-bar-opacitic"></nav>
 
     <div class="nav-container">
-        <a href="subPages/About.html" class="nav-item">About</a>
+        <a href="About.html" class="nav-item">About</a>
         <a href="../index.html" class="nav-item">Home</a>
-        <a href="subPages/Projects.html" class="nav-item">Projects</a>
-        <a href="subPages/Projects.html" class="nav-item">Art</a>
-        <a href="indexOld.html" class="nav-item">Old</a>
+        <a href="Projects.html" class="nav-item">Projects</a>
+        <a href="Art.html" class="nav-item">Art</a>
+        <a href="../indexOld.html" class="nav-item">Old</a>
     </div>
 
     <div class="title-container">
