--- a/subPages/Contact.html
+++ b/subPages/Contact.html
@@ -33,14 +33,17 @@
 
     <div class="main-content">
         <div class="merge-banner"></div>
-        <ul class="article-text-black" style="background-color: rgba(0,0,0,0); list-style-type: none;">
-            <li>Email   - gpholben@gmail.com</li>
-            <li>Phone   - (123)-456-7890</li>
-            <li>Github  - <a href="https://github.com/the-real-mastermind">https://github.com/the-real-mastermind</a></li>
-            <li>Discord - therealarchitect</li>
-            <li>Matrix  - @therealarchitect:matrix.org</li>
-
-          </ul>
+        <div class="article-text-black" style="padding-top: 0%;">
+            <ul class="article-text-black" style="background-color: rgba(0,0,0,0); list-style-type: none;">
+                <li>Email   - gpholben@gmail.com</li>
+                <li>Phone   - (123)-456-7890</li>
+                <li>Github  - <a href="https://github.com/the-real-mastermind">https://github.com/the-real-mastermind</a></li>
+                <li>Discord - therealarchitect</li>
+                <li>Matrix  - @therealarchitect:matrix.org</li>
+    
+              </ul>
+        </div>
+       
     </div>
 
     <footer id="footer">
