updated with todos

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
         <a href="subPages/Contact.html" class="nav-item">Contacts</a>
         <a href="subPages/Projects.html" class="nav-item">Projects</a>
         <a href="subPages/Art.html" class="nav-item">Art</a>
-        <a href="indexOld.html" class="nav-item">Old</a>
+        <!-- <a href="indexOld.html" class="nav-item">Old</a> -->
     </div>
 
     <div class="title-container">
         <h1>The Mastermind</h1>
+        
     </div>
     <div id="Duck" onclick="reverseDuck()"></div>
 
@@ -37,7 +38,7 @@
     </div>
 
     <footer id="footer">
-        <h2>&copy; 2025 The Mastrmind. All rights reserved.</h2>
+        <h2>&copy; 2025 The Mastrmind. All rights reserved (This website is a work in progress)</h2>
     </footer>
 </body>
 </html>
