--- a/subPages/Contact.html
+++ b/subPages/Contact.html
@@ -22,7 +22,7 @@
         <a href="../index.html" class="nav-item">Home</a>
         <a href="Projects.html" class="nav-item">Projects</a>
         <a href="Art.html" class="nav-item">Art</a>
-        <a href="../indexOld.html" class="nav-item">Old</a>
+        <!-- <a href="../indexOld.html" class="nav-item">Old</a> -->
     </div>
 
     <div class="title-container">
