Updated About me
Added hobbies
Added PC specs
TODO: add art/projects in tiled format

--- a/subPages/About.html
+++ b/subPages/About.html
@@ -18,8 +18,8 @@
     <nav id="nav-bar-opacitic"></nav>
 
     <div class="nav-container">
-        <a href="Contact.html" class="nav-item">Contacts</a>
         <a href="../index.html" class="nav-item">Home</a>
+        <a href="Contact.html" class="nav-item">Contacts</a>
         <a href="Projects.html" class="nav-item">Projects</a>
         <a href="Art.html" class="nav-item">Art</a>
         <!-- <a href="../indexOld.html" class="nav-item">Old</a> -->
@@ -38,11 +38,47 @@
 
       </div>
 
-    <div class="secondary-content">
-      <h1 class="article-text-black">Hello! my name is [REDACTED] I am a student living in [LOCATION] studying to be a Software developer. My interests are quite diverse and are listed below. The ways to contact me are listed on my contacts page, and all of my projects are found at the projects page.</h1>
+    <div class="secondary-content" style="height: 195%">
+      <h1 class="article-text-black">
+        <ul style="list-style: none;">
+            <li>Game Development<br> I spend a lot of time developing and experimenting with the many ideas that float inside my head. Most of them never end up as finished projects</li>
+            <br>
+            <li>Networking<br> This is the most recent of my hobbies that I have gotten into, I enjoy testing and learning about linux web server technologies. </li>
+            <br>
+            <li>Model Kits<br> One of my favorite things to do for almost my entire life has been model kits (e.g., LEGO & Gunpla) I have an extensive collection and constantly adding to it </li>
+            <br>
+            <li>3D Printing<br> Several years ago I purchesed a 3D printer (Ender 3 V2 NEO) after learning to use one of my associates 3D printers, from there I have grown into creating a plethora of large models and small models alike (The majority of which are items found within the video games I play)  </li>
+            <br>
+            <li>Video games<br> As with most of the people my age I often find myself indulging in the act of playing video games, my favorite of which are (but not limited to) The Legend Of Zelda, Xenoblade chronicles, and Worldless. I also often enjoy playing through smaller indie games found on video game markets such as Steam.  </li>
+            <br>
+            <li>PC Building<br>Although it is rare that I get to enjoy this hobby I do still quite enjoy the thrill of putting together a new system, whether it be for me or an associate of myself. It is always an enjoyable experiance (PC specs listed below)</li>
+
+        </ul>
+      </h1>
 
     </div>
 
+    <div class="main-content" style="height: 140%; top: 314%; position: absolute;">
+        <div class="merge-banner" style="background-image: url(../Images/bkg/DarkMergeInverted.png);"></div>
+        <h1 class="article-text-black" style="margin-top: 0%;">My current Personal Computer Specs are as follows:
+            <ul style="list-style: none;">
+                <li>CPU<br>AMD Ryzen 7 9700X 8-Core</li>
+                <br>
+                <li>GPU<br>AMD Radeon RX 7600XT (12GB)</li>
+                <br>
+                <li>RAM<br>32GB DDR5</li>
+                <br>
+                <li>Motherboard<br>B650 Aorus Elite AX ICE</li>
+                <br>
+                <li>Storage<br>3TB (SSD) 4TB (HDD)</li>
+                <br>
+            </ul>
+        </h1>
+        
+    </div>
+
+    <!-- PC SPECS -->
+     
     <footer id="footer">
         <h2>&copy; 2025 The Mastrmind. All rights reserved.</h2>
     </footer>
